2010-06-09  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/agent_manager.php: Fixed the agent icons on 
	agent setup for bug: 3013426

2010-06-09  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/module_manager_editor_wmi.php: Added missing '_'.

2010-06-08  Raúl Mateos <raulofpandora@gmail.com>

	* operation/incidents/incident_detail.php,
	operation/incidents/incident.php: cleaned code, improved button usability.
	TODO: Use links instead buttons where adding notes.

	* operation/incidents/events.php: Cleaned code.

2010-06-08  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql, DEBIAN/control,
	  DEBIAN/make_deb_package.sh, include/config_process.php,
	  pandora_console.spec: Update version strings.

2010-06-08  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.main.php: changed the text of button
	for more clear mean.

2010-06-08  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/conffiles: re-changed the conffiles for try solved a bug in the
	install DEB package.

2010-06-08  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/gis_maps/configure_gis_map.php: refixed layers when to update data
	of gis map and magic quotes is on.

2010-06-08  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/alerts_status.php: fixed the style in the list of
	alerts.

2010-06-07  Raúl Mateos <raulofpandora@gmail.com>

	* godmode/agentes/agent_conf_gis.php: Changed warning text and style.

	* include/styles/install.css, include/styles/pandora_minimal.css:
	Fixed some typos.

	* include/styles/pandora.css: Add new warn style to shown warning texts.

2010-06-07  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_visual_map.php: fixed the uncolour path between parent
	and child when update 3.0 to 3.1.
	
	Fixes: #3008489

2010-06-07  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php: Disabled DB cache for
	  get_agent_module_info () to avoid memory errors in big
	  environments.
